wip: stuff / Docker環境の調整

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    command: yarn start:dev
     ports:
       - 4000:4000
     volumes:
