--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=postgres-db
+DB_HOST=localhost
 DB_PORT=5432
 DB_USER_NAME=postgres
 DB_PASSWORD=password
 DB_NAME=postgres
+DB_CONTAINER_NAME=postgres-db
